payas-database-subsystem/payas-database-model-builder/src/snapshots/payas_parser__builder__resolved_builder__tests__with_annotations.snap
---
source: payas-builder/src/builder/resolved_builder.rs
expression: resolved
---
primitive_types:
  values:
    - - ~
      - Primitive: Boolean
    - - ~
      - Primitive: Int
    - - ~
      - Primitive: Float
    - - ~
      - Primitive: Decimal
    - - ~
      - Primitive: String
    - - ~
      - Primitive: LocalTime
    - - ~
      - Primitive: LocalDateTime
    - - ~
      - Primitive: LocalDate
    - - ~
      - Primitive: Instant
    - - ~
      - Primitive: Json
    - - ~
      - Primitive: Blob
    - - ~
      - Primitive: Uuid
    - - ~
      - Primitive: Claytip
    - - ~
      - Primitive: ClaytipPriv
    - - ~
      - Primitive:
          Interception: Operation
    - ~
  map:
    Blob:
      index: 10
      generation: ~
    Boolean:
      index: 0
      generation: ~
    Claytip:
      index: 12
      generation: ~
    ClaytipPriv:
      index: 13
      generation: ~
    Decimal:
      index: 3
      generation: ~
    Float:
      index: 2
      generation: ~
    Instant:
      index: 8
      generation: ~
    Int:
      index: 1
      generation: ~
    Json:
      index: 9
      generation: ~
    LocalDate:
      index: 7
      generation: ~
    LocalDateTime:
      index: 6
      generation: ~
    LocalTime:
      index: 5
      generation: ~
    Operation:
      index: 14
      generation: ~
    String:
      index: 4
      generation: ~
    Uuid:
      index: 11
      generation: ~
database_types:
  values:
    - - ~
      - Composite:
          name: Concert
          plural_name: Concerts
          fields:
            - name: id
              typ:
                Plain:
                  type_name: Int
                  is_primitive: true
              kind:
                Persistent:
                  column_name: custom_id
                  self_column: true
                  is_pk: true
                  type_hint:
                    Explicit:
                      dbtype: BIGINT
                  unique_constraints: []
              default_value: Autoincrement
            - name: title
              typ:
                Plain:
                  type_name: String
                  is_primitive: true
              kind:
                Persistent:
                  column_name: custom_title
                  self_column: true
                  is_pk: false
                  type_hint:
                    String:
                      length: 12
                  unique_constraints: []
              default_value: ~
            - name: venue
              typ:
                Plain:
                  type_name: Venue
                  is_primitive: false
              kind:
                Persistent:
                  column_name: custom_venue_id
                  self_column: true
                  is_pk: false
                  type_hint: ~
                  unique_constraints: []
              default_value: ~
            - name: reserved
              typ:
                Plain:
                  type_name: Int
                  is_primitive: true
              kind:
                Persistent:
                  column_name: reserved
                  self_column: true
                  is_pk: false
                  type_hint:
                    Int:
                      bits: ~
                      range:
                        - 0
                        - 300
                  unique_constraints: []
              default_value: ~
            - name: time
              typ:
                Plain:
                  type_name: Instant
                  is_primitive: true
              kind:
                Persistent:
                  column_name: time
                  self_column: true
                  is_pk: false
                  type_hint:
                    DateTime:
                      precision: 4
                  unique_constraints: []
              default_value: ~
            - name: price
              typ:
                Plain:
                  type_name: Decimal
                  is_primitive: true
              kind:
                Persistent:
                  column_name: price
                  self_column: true
                  is_pk: false
                  type_hint:
                    Decimal:
                      precision: 10
                      scale: 2
                  unique_constraints: []
              default_value: ~
          kind:
            Persistent:
              table_name: custom_concerts
          access:
            creation:
              BooleanLiteral:
                - true
            read:
              BooleanLiteral:
                - true
            update:
              BooleanLiteral:
                - true
            delete:
              BooleanLiteral:
                - true
    - - ~
      - Composite:
          name: Venue
          plural_name: Venuess
          fields:
            - name: id
              typ:
                Plain:
                  type_name: Int
                  is_primitive: true
              kind:
                Persistent:
                  column_name: custom_id
                  self_column: true
                  is_pk: true
                  type_hint: ~
                  unique_constraints: []
              default_value: Autoincrement
            - name: name
              typ:
                Plain:
                  type_name: String
                  is_primitive: true
              kind:
                Persistent:
                  column_name: custom_name
                  self_column: true
                  is_pk: false
                  type_hint: ~
                  unique_constraints: []
              default_value: ~
            - name: concerts
              typ:
                List:
                  Plain:
                    type_name: Concert
                    is_primitive: false
              kind:
                Persistent:
                  column_name: custom_venue_id
                  self_column: false
                  is_pk: false
                  type_hint: ~
                  unique_constraints: []
              default_value: ~
            - name: capacity
              typ:
                Plain:
                  type_name: Int
                  is_primitive: true
              kind:
                Persistent:
                  column_name: capacity
                  self_column: true
                  is_pk: false
                  type_hint:
                    Int:
                      bits: 16
                      range: ~
                  unique_constraints: []
              default_value: ~
            - name: latitude
              typ:
                Plain:
                  type_name: Float
                  is_primitive: true
              kind:
                Persistent:
                  column_name: latitude
                  self_column: true
                  is_pk: false
                  type_hint:
                    Float:
                      bits: 24
                  unique_constraints: []
              default_value: ~
          kind:
            Persistent:
              table_name: venues
          access:
            creation:
              BooleanLiteral:
                - true
            read:
              BooleanLiteral:
                - true
            update:
              BooleanLiteral:
                - true
            delete:
              BooleanLiteral:
                - true
    - ~
    - ~
  map:
    Concert:
      index: 0
      generation: ~
    Venue:
      index: 1
      generation: ~
service_types:
  values:
    - ~
    - ~
    - ~
    - ~
  map: {}
contexts:
  values:
    - ~
    - ~
    - ~
    - ~
  map: {}
services:
  values:
    - - ~
      - name: Foo
        script:
          - 47
          - 47
          - 32
          - 100
          - 101
          - 110
          - 111
          - 45
          - 102
          - 109
          - 116
          - 45
          - 105
          - 103
          - 110
          - 111
          - 114
          - 101
          - 45
          - 102
          - 105
          - 108
          - 101
          - 10
          - 47
          - 47
          - 32
          - 100
          - 101
          - 110
          - 111
          - 45
          - 108
          - 105
          - 110
          - 116
          - 45
          - 105
          - 103
          - 110
          - 111
          - 114
          - 101
          - 45
          - 102
          - 105
          - 108
          - 101
          - 10
          - 47
          - 47
          - 32
          - 84
          - 104
          - 105
          - 115
          - 32
          - 99
          - 111
          - 100
          - 101
          - 32
          - 119
          - 97
          - 115
          - 32
          - 98
          - 117
          - 110
          - 100
          - 108
          - 101
          - 100
          - 32
          - 117
          - 115
          - 105
          - 110
          - 103
          - 32
          - 96
          - 100
          - 101
          - 110
          - 111
          - 32
          - 98
          - 117
          - 110
          - 100
          - 108
          - 101
          - 96
          - 32
          - 97
          - 110
          - 100
          - 32
          - 105
          - 116
          - 39
          - 115
          - 32
          - 110
          - 111
          - 116
          - 32
          - 114
          - 101
          - 99
          - 111
          - 109
          - 109
          - 101
          - 110
          - 100
          - 101
          - 100
          - 32
          - 116
          - 111
          - 32
          - 101
          - 100
          - 105
          - 116
          - 32
          - 105
          - 116
          - 32
          - 109
          - 97
          - 110
          - 117
          - 97
          - 108
          - 108
          - 121
          - 10
          - 10
          - 10
        script_path: bar.js
        methods:
          - name: qux
            operation_kind: Query
            is_exported: true
            access:
              creation:
                BooleanLiteral:
                  - true
              read:
                BooleanLiteral:
                  - true
              update:
                BooleanLiteral:
                  - true
              delete:
                BooleanLiteral:
                  - true
            arguments:
              - name: claytip
                typ:
                  Plain:
                    type_name: Claytip
                    is_primitive: true
                is_injected: true
              - name: x
                typ:
                  Plain:
                    type_name: Int
                    is_primitive: true
                is_injected: false
              - name: y
                typ:
                  Plain:
                    type_name: String
                    is_primitive: true
                is_injected: false
            return_type:
              Plain:
                type_name: Int
                is_primitive: true
          - name: quuz
            operation_kind: Mutation
            is_exported: false
            access:
              creation:
                BooleanLiteral:
                  - true
              read:
                BooleanLiteral:
                  - true
              update:
                BooleanLiteral:
                  - true
              delete:
                BooleanLiteral:
                  - true
            arguments: []
            return_type:
              Plain:
                type_name: String
                is_primitive: true
        interceptors: []
    - ~
    - ~
    - ~
  map:
    Foo:
      index: 0
      generation: ~

